<resources>
    <string name="app_name">Examen-01</string>
    <string name="title_activity_menu">menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="a_adir">Añadir</string>
    <string name="nueva_biblioteca">Nueva Biblioteca</string>
    <string name="direcci_n">Dirección:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="telefono">Telefono:</string>
    <string name="nombrebilioteca">NombreBilioteca:</string>
    <string name="hint">hint</string>
    <string name="cancelar">Cancelar</string>
    <string name="yearfundaci_n">YearFundación:</string>
    <string name="lista_de_bibliotecas">Lista de Bibliotecas:</string>
    <string name="a_adi">Añadir</string>
    <string name="nombre_de_la_biblioteca">Nombre de la Biblioteca</string>
    <string name="a_o_de_fundaci_n">Año de Fundación</string>
    <string name="t_lefono">Télefono</string>
    <string name="nombre_de_la_bilioteca">Nombre de la bilioteca</string>
    <string name="autor">Autor:</string>
    <string name="nombre_del_libro">Nombre del libro:</string>
    <string name="a_adir_nuevo_libro">Añadir Nuevo Libro</string>
    <string name="cancela">cancelar</string>
    <string name="edicion">edicion</string>
    <string name="nombre_de_biblioteca">Nombre de la biblioteca:</string>
    <string name="a_o_de_edici_n">Año de edición:</string>
    <string name="categoria">Categoria:</string>
    <string name="escritor">autor</string>
    <string name="a_ade">añadir</string>
    <string name="nombre_de_libro">Nombre del libro</string>
    <string name="seccion">hint</string>
</resources>