<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI_AnadirPokemon">

    <Button
        android:id="@+id/btn_AddLibro"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/a_ade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout15" />

    <Button
        android:id="@+id/btn_CancelLibro"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/cancela"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout15" />

    <TextView
        android:id="@+id/tv_AnadirLibro"
        android:layout_width="324dp"
        android:layout_height="47dp"
        android:layout_marginTop="45dp"
        android:text="@string/a_adir_nuevo_libro"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_NombreLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nombre_del_libro"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_AnadirLibro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_AnadirLibro"
        app:layout_constraintTop_toBottomOf="@+id/tv_AnadirLibro" />

    <TextView
        android:id="@+id/tv_NameBiblioteca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nombre_de_biblioteca"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

    <TextView
        android:id="@+id/tv_Autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/autor"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout12"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout12" />

    <TextView
        android:id="@+id/tv_YearEdicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/a_o_de_edici_n"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout13"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout13" />

    <TextView
        android:id="@+id/tv_Categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/categoria"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout14"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout14" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/tv_NombreLibro"
        app:layout_constraintTop_toBottomOf="@+id/tv_NombreLibro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtIn_NombreLibro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nombre_de_libro"
            android:textColorHint="#616161"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_NameBiblioteca"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_NameBiblioteca"
        app:layout_constraintTop_toBottomOf="@+id/tv_NameBiblioteca">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtIn_NameBiblioteca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_la_bilioteca"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout13"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_Autor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_Autor"
        app:layout_constraintTop_toBottomOf="@+id/tv_Autor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtIn_Autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escritor"
            android:textColorHint="#616161"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout14"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/tv_YearEdicion"
        app:layout_constraintTop_toBottomOf="@+id/tv_YearEdicion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtIn_YearEdicion"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:hint="@string/edicion"
            android:textColorHint="#616161"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout15"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_Categoria"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_Categoria"
        app:layout_constraintTop_toBottomOf="@+id/tv_Categoria">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtIn_Categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/seccion"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>