<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI_AnadirBiblioteca">

    <Button
        android:id="@+id/btn_AddBiblioteca"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:text="@string/a_adir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout11"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout11"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_CancelBiblioteca"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout11" />

    <TextView
        android:id="@+id/tv_AnadirBiblioteca"
        android:layout_width="324dp"
        android:layout_height="47dp"
        android:layout_marginTop="45dp"
        android:text="@string/nueva_biblioteca"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_NombreBiblioteca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Nombre de la Biblioteca"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_AnadirBiblioteca"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_AnadirBiblioteca"
        app:layout_constraintTop_toBottomOf="@+id/tv_AnadirBiblioteca" />

    <TextView
        android:id="@+id/tv_YearFundacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Año de Fundación"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/tv_Ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ciudad"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/tv_Direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/direcci_n"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout9"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" />

    <TextView
        android:id="@+id/tv_Telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Télefono"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout10"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout10" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_NombreBiblioteca"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_NombreBiblioteca"
        app:layout_constraintTop_toBottomOf="@+id/tv_NombreBiblioteca">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtIn_NombreBiblioteca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_YearFundacion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_YearFundacion"
        app:layout_constraintTop_toBottomOf="@+id/tv_YearFundacion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtIn_YearFundacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:textColorHint="#616161"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_Ciudad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_Ciudad"
        app:layout_constraintTop_toBottomOf="@+id/tv_Ciudad">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtIn_Ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616161"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_Direccion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_Direccion"
        app:layout_constraintTop_toBottomOf="@+id/tv_Direccion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtln_Direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616161"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout11"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_Telefono"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="@+id/tv_Telefono"
        app:layout_constraintTop_toBottomOf="@+id/tv_Telefono">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtln_Categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616161"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>